--- a/work.html
+++ b/work.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Selected projects by Arthur Guerra — graphics programming, geometry processing, rendering, and simulation." />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.orange.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css" />
 
   <link rel="stylesheet" href="css/work.css" />
 
@@ -19,7 +18,7 @@
 </head>
 <body>
 
-  <div class="container-fluid pico-background-slate-900" style="position: sticky; top: 0; z-index: 10;">
+  <div id="navigation" class="container-fluid" style="position: sticky; top: 0; z-index: 10;">
     <nav id="main-navigation" class="container">
       <ul>
         <li>
@@ -32,8 +31,8 @@
         </li>
       </ul>
       <ul>
-        <li><a href="index.html#about">About</a></li>
         <li><a href="assets/ArthurCarvalhoGuerra.pdf" download>CV</a></li>
+        <li><a href="index.html#about">About</a></li>
         <li><a href="mailto:conta.arthurguerra@gmail.com" class="contrast">Contact</a></li>
       </ul>
     </nav>
